src/public/css/elements/forms.less
form {
    p {
        margin-bottom: 1.5em;
    }

    label {
        display: block;
        margin-bottom: 0.3em;
    }

    label.for-radio {
        display: inline-block;
        margin-left: 5px;
    }

    fieldset {
        padding: 20px;
    }

    fieldset legend {
        padding: 0;
        font-weight: bold;
    }

    fieldset p:last-of-type {
        margin-bottom: 0;
    }
}

input[type="text"],
input[type="number"],
input[type="email"],
input[type="password"],
input[type="url"],
input[type="date"],
input[type="time"],
input[type="tel"],
textarea,
select {
    display: block;
    padding: 0.4em 0.6em;
    border-radius: 4px;
    border: 1px solid black;
    background-color: white;

    &[disabled] {
        background-color: #e3e3e3;
        cursor: not-allowed;
    }
}

input[type="file"] {
    line-height: 1;
}

select {
    height: 38px;
    padding-top: 0;
    padding-bottom: 0;
}
select[multiple] {
    height: auto;
}

textarea {
    width: 400px;
    height: 170px;
}

form input[type="submit"].fake-link {
    color: @highlightColor;
    text-decoration: none;
    padding: 0;
    margin: 0;
    background-color: inherit;
    font-weight: normal;
    border: none;
    border-radius: 0;
    outline: none;
    box-shadow: none;

    &:hover {
        top: 0;
    }
}

